--- a/contact-me.html
+++ b/contact-me.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Contact Me</title>
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
-        <h1>My Contact Details</h1>
+        
+        <h1 style="color: palevioletred;">My Contact Details</h1>
         <p>Fake Address</p>
         <p>1234567891</p>
         <p>ammuinduja@gmail.com</p>
