--- a/hobbies.html
+++ b/hobbies.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>My Hobbies</title>
+        <link rel="stylesheet" href="css/style.css">
         
     </head>
     <body>
-        <h1>My Hobbies</h1>
+        <h1 style="color: palevioletred;">My Hobbies</h1>
         <ol>
             <li><a href="https://www.youtube.com/watch?v=9xVs5piJUWo">Cooking</a></li>
             <li><a href="https://www.youtube.com/watch?v=y5j7lRW3Si0">Watching Movies</a></li>
